// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewCounters /> should render correctly counters with districts 1`] = `
<div
  className="mt-10"
>
  <TagsList>
    <ProjectPreviewCounter
      icon="cap-baloon-1"
      label="project.preview.counters.contributions"
      showZero={true}
      value={89}
    />
    <ProjectPreviewCounter
      icon="cap-hand-like-2-1"
      label="project.preview.counters.votes"
      showZero={false}
      value={54}
    />
    <ProjectPreviewCounter
      icon="cap-user-2-1"
      label="project.preview.counters.contributors"
      showZero={true}
      value={54}
    />
    <Tag
      icon="cap cap-marker-1-1"
    >
      <ForwardRef(Relay(ProjectHeaderDistrictsList))
        breakingNumber={1}
        fontSize={14}
        project={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "contributionsCount": 89,
            "contributors": Object {
              "anonymousCount": 0,
              "totalCount": 54,
            },
            "districts": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "name": "zone 1",
                  },
                },
                Object {
                  "node": Object {
                    "name": "zone 2",
                  },
                },
                Object {
                  "node": Object {
                    "name": "zone 3",
                  },
                },
                Object {
                  "node": Object {
                    "name": "zone 4",
                  },
                },
                Object {
                  "node": Object {
                    "name": "zone 5",
                  },
                },
              ],
              "totalCount": 5,
            },
            "hasParticipativeStep": true,
            "id": "project2",
            "isContributionsCounterDisplayable": true,
            "isExternal": false,
            "isParticipantsCounterDisplayable": true,
            "isVotesCounterDisplayable": true,
            "votes": Object {
              "totalCount": 54,
            },
          }
        }
      />
    </Tag>
    <ForwardRef(Relay(ProjectRestrictedAccessFragment))
      icon="cap-lock-2-1"
      project={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "contributionsCount": 89,
          "contributors": Object {
            "anonymousCount": 0,
            "totalCount": 54,
          },
          "districts": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "name": "zone 1",
                },
              },
              Object {
                "node": Object {
                  "name": "zone 2",
                },
              },
              Object {
                "node": Object {
                  "name": "zone 3",
                },
              },
              Object {
                "node": Object {
                  "name": "zone 4",
                },
              },
              Object {
                "node": Object {
                  "name": "zone 5",
                },
              },
            ],
            "totalCount": 5,
          },
          "hasParticipativeStep": true,
          "id": "project2",
          "isContributionsCounterDisplayable": true,
          "isExternal": false,
          "isParticipantsCounterDisplayable": true,
          "isVotesCounterDisplayable": true,
          "votes": Object {
            "totalCount": 54,
          },
        }
      }
    />
  </TagsList>
</div>
`;

exports[`<ProjectPreviewCounters /> should render correctly counters without districts 1`] = `
<div
  className="mt-10"
>
  <TagsList>
    <ProjectPreviewCounter
      icon="cap-baloon-1"
      label="project.preview.counters.contributions"
      showZero={true}
      value={71}
    />
    <ProjectPreviewCounter
      icon="cap-hand-like-2-1"
      label="project.preview.counters.votes"
      showZero={false}
      value={48}
    />
    <ProjectPreviewCounter
      icon="cap-user-2-1"
      label="project.preview.counters.contributors"
      showZero={true}
      value={50}
    />
    <ForwardRef(Relay(ProjectRestrictedAccessFragment))
      icon="cap-lock-2-1"
      project={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "contributionsCount": 71,
          "contributors": Object {
            "anonymousCount": 2,
            "totalCount": 48,
          },
          "districts": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "hasParticipativeStep": true,
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "isContributionsCounterDisplayable": true,
          "isExternal": false,
          "isParticipantsCounterDisplayable": true,
          "isVotesCounterDisplayable": true,
          "votes": Object {
            "totalCount": 48,
          },
        }
      }
    />
  </TagsList>
</div>
`;
